[tool.poetry]
name = "yosafe-packages"
version = "0.1.0"
description = ""
authors = ["Yo581515 <581515@stud.hvl.no>"]
readme = "README.md"
packages = [{include = "yosafe_packages", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
yosafe-subpackage-1 = {git = "https://github.com/Yo581515/yosafe_subpackage_1.git"}
yosafe-subpackage-2 = {git = "https://github.com/Yo581515/yosafe_subpackage_2.git"}
yosafe-subpackage-3 = {git = "https://github.com/Yo581515/yosafe_subpackage_3.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
